@@ -7,9 +7,10 @@ int main(int argc, const char *argv[])
 {
     int i, j, n = 57;
     int sign;
+
+#ifdef VC_PROJECT
 	FILE *fp;
 
-#if defined (IA_W32GUI) || defined (IA_W32G_SYN)
 	if (argc != 2)
 	{
 		fprintf(stderr, "usage: calcnewt <filename>\n");
@@ -38,23 +39,23 @@ int main(int argc, const char *argv[])
     	{
     	    newt_coeffs[i][j] = newt_coeffs[i-1][j-1] + newt_coeffs[i-1][j];
 
-	    if (i > 1)
-	    	newt_coeffs[i][j] /= i;
-	}
+			if (i > 1)
+	    		newt_coeffs[i][j] /= i;
+		}
     }
     for (i = 0; i <= n; i++)
     	for (j = 0, sign = pow(-1, i); j <= i; j++, sign *= -1)
     	    newt_coeffs[i][j] *= sign;
 
-#if ! defined (IA_W32GUI) && ! defined (IA_W32G_SYN)
-    for (i = 0; i <= n; i++)
-	for (j = 0; j <= n; j++)
-	    printf("%2.32g,\n", newt_coeffs[i][j]);
-#else
+#ifdef VC_PROJECT
     for (i = 0; i <= n; i++)
 	for (j = 0; j <= n; j++)
 	    fprintf(fp, "(float)%2.32g,\n", newt_coeffs[i][j]);
 	fclose(fp);
+#else
+    for (i = 0; i <= n; i++)
+	for (j = 0; j <= n; j++)
+	    printf("%2.32g,\n", newt_coeffs[i][j]);
 #endif
     return 0;
 }
